<resources>
    <string name="app_name" translatable="false">Vacineme</string>
    <string name="welcome_to_vacineme">Welcome to Vacineme</string>
    <string name="select_a_person">Select a person:</string>
    <string name="add_a_new_vaccine">Add a new vaccine</string>
    <string name="made_by_vanderley">Made by: Vanderley :)</string>
    <string name="genero_feminino">Female</string>
    <string name="genero_masculino">Male</string>
    <string name="salvar_nova_pessoa">Save new person</string>
    <string name="esposo">Husband</string>
    <string name="esposa">Wife</string>
    <string name="filho">Son</string>
    <string name="filha">Daughter</string>
    <string name="mae">Mother</string>
    <string name="pet">Pet</string>
    <string name="pai">Father</string>
    <string name="avo">Grandma</string>
    <string name="avo_m">Grandpa</string>
    <string name="feminino">Female</string>
    <string name="masculino">Male</string>
    <string name="pessoa_cadastrada_sucesso">Person successfully registered</string>
    <string name="registros_de_vacinas">Vaccine registers:</string>
    <string name="adicionar_novo_registro">Add new record</string>
    <string name="vaccines">Vaccines</string>
    <string name="lotNumber">Lot number:</string>
    <string name="salvar_nova_vacina">Save new vaccine</string>
    <string name="laboratorio">Laboratory:</string>
    <string name="formato_data">yyyy/MM/dd</string>
    <string name="aplicado_em">Applied:</string>
    <string name="proxima_dose_em">Next dose:</string>
    <string name="informe_o_nome_da_pessoa">Insert the vaccines\'s name</string>
    <string name="informe_a_data_de_nascimento">Insert the person\'s date of birth</string>
    <string name="informe_o_genero_da_pessoa">Insert the person\'s gender</string>
    <string name="informe_o_parentesco">Insert the relationship</string>
    <string name="verifique_a_data_de_nascimento">Check the date of birth</string>
    <string name="nome_da_pessoa">Person\'s name:</string>
    <string name="data_de_nascimento">Person\'s date of birth:</string>
    <string name="gender">Gender:</string>
    <string name="parentesco2">Relationship:</string>
    <string name="sobre">About</string>
    <string name="sobre_app">Vacineme is a vaccination management application from a domestic environment, developed for the Mobile Programming course, taught by Prof. Alexandre Feitoza at the Universidade Tecnológica Federal do Paraná.</string>

    <string-array name="relationship">
        <item>@string/esposo</item>
        <item>@string/esposa</item>
        <item>@string/filho</item>
        <item>@string/filha</item>
        <item>@string/pai</item>
        <item>@string/mae</item>
        <item>@string/avo</item>
        <item>@string/avo_m</item>
        <item>@string/pet</item>
    </string-array>

    <string-array name="icones_parentesco">
        <item>@drawable/ic_homem</item>
        <item>@drawable/ic_mulher</item>
        <item>@drawable/ic_menino</item>
        <item>@drawable/ic_menina</item>
        <item>@drawable/ic_homem</item>
        <item>@drawable/ic_mulher</item>
        <item>@drawable/ic_avo</item>
        <item>@drawable/ic_avo_m</item>
        <item>@drawable/ic_pet</item>
    </string-array>
    <string name="inserir_uma_nova_pessoa">Insert a new person</string>
    <string name="vaccine_name">Vaccine\'s name</string>
    <string name="about_vacineme">About Vacineme</string>
    <string name="laboratory_name_form">Laboratory\'s name:</string>
    <string name="lot_number_form">Lot\'s number:</string>
    <string name="vaccine_description_form">Vaccine\'s description:</string>
    <string name="vaccine_successfully_registered">Vaccine successfully registered</string>
    <string name="insert_the_vaccine_description">Insert the vaccine\'s description</string>
    <string name="add_new_register">Add new register</string>
    <string name="save_new_register">Save new register</string>
    <string name="select_a_person_form">Select a person:</string>
    <string name="select_a_vaccine_form">Select a vaccine:</string>
    <string name="date_of_application_form">Date of application:</string>
    <string name="date_next_application_form">Date of next application:</string>
    <string name="people">People</string>
    <string name="you_need_to_add_a_person_and_a_vaccine_before">You need to add a person and a vaccine before</string>
    <string name="you_need_to_select_a_person">You need to select a person</string>
    <string name="you_need_to_select_a_vaccine">You need to select a vaccine</string>
    <string name="inform_the_date_of_application">Inform the date of application</string>
    <string name="register_successfully_registered">Register successfully registered</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="delete_item">Delete item</string>
    <string name="delete">Delete</string>
    <string name="inform_the_date_of_next_application">Inform the date of next application</string>
    <string name="choose_an_option">Choose an option:</string>
    <string name="change">Change</string>
    <string name="successfully_deleted">Successfully deleted</string>
    <string name="edit_person">Edit person</string>
    <string name="no_people_found">No people found</string>
    <string name="save_changes">Save changes</string>
    <string name="no_vaccines_found">No vaccines found</string>
    <string name="edit_vaccine">Edit vaccine</string>
    <string name="edit_register">Edit register</string>
    <string name="save">Save</string>
    <string name="confirmation">Confirmation</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="do_you_really_want_to_delete_this_person">Do you really want to delete this person?</string>
    <string name="do_you_really_want_to_delete_this_register">Do you really want to delete this register?</string>
    <string name="do_you_really_want_to_delete_this_vaccine">Do you really want to delete this vaccine?</string>
    <string name="alert">Alert</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="this_vaccine_is_being_used">This vaccine is being used</string>

</resources>