<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/addNewRegistro"
        android:icon="@drawable/ic_baseline_add_24px"
        android:title="@string/adicionar_novo_registro"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemPessoas"
        android:icon="@drawable/ic_face"
        android:title="@string/people"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemVacinas"
        android:icon="@drawable/ic_baseline_colorize_24px"
        android:title="@string/vaccines"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemSobre"
        android:icon="@drawable/ic_baseline_help_outline_24px"
        android:title="@string/sobre"
        app:showAsAction="ifRoom" />
</menu>