<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="5dp">

    <ImageView
        android:id="@+id/imageViewVaccine"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="4dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewVaccineName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/vaccine_name"
            android:textColor="#000"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDateOfApplication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/aplicado_em"
            android:textColor="#333" />

        <TextView
            android:id="@+id/textViewNextDateVaccine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/proxima_dose_em"
            android:textColor="#333" />

    </LinearLayout>
</LinearLayout>